eccfe/k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eccfe-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - backend:
              service:
                name: eccfe-service
                port:
                  number: 3002
            path: /eccfe(/|$)(.*)
            pathType: ImplementationSpecific
